# ToastDB

./: README.md
server/: functions.js  index.js  package-lock.json  package.json
storage/: Cargo.toml  Dockerfile  README.md  Rocket.toml
storage/src/: functions.rs  main.rs  persistence.rs
