[package]
name = "toastdb"
version = "0.1.0"
authors = ["toaster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"

[profile.dev]
opt-level = 'z'

[profile.release]
opt-level = 3
